--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Este es un sitio web con Github Pages.</h1>
     <p>Es sólo para repasar el tema.</p>
+	<p>Esta es otra prueba.<p/>
 </body>
 </html>
